[tool.poetry]
name = "playhdl"
version = "0.1.0"
description = ""
authors = ["esynr3z <esynr3z@gmail.com>"]

[tool.poetry.scripts]
playhdl = "playhdl.cli:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
tox = "^3.26.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
