[tool.poetry]
name = "playhdl"
version = "0.2.1"
description = "Tool to play with HDL (inspired by EdaPlayground)"
authors = ["esynr3z <esynr3z@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/esynr3z/playhdl"

[tool.poetry.scripts]
playhdl = "playhdl.cli:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.8.0"
tox = "^3.26.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
usort = "^1.0.5"
flake8-annotations = "^2.9.1"
flake8-type-checking = "^2.3.0"
types-setuptools = "^65.6.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
